force-app/main/default/objects/CoIT_SFS_Migration_Click__c/CoIT_SFS_Migration_Click__c.object-meta.xml
<CustomObject>
    <label>SFS Migration Click</label>
    <nameField>
        <displayFormat>M-{000000000}</displayFormat>
        <label>SFS Migration Click Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFS Migrations Click</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>