force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_AssignmentFinish__c.field-meta.xml
<CustomField>
    <fullName>CoIT_AssignmentFinish__c</fullName>
    <label>Assignment Finish</label>
    <type>DateTime</type>
</CustomField>