force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_AssignmentStart__c.field-meta.xml
<CustomField>
    <fullName>CoIT_AssignmentStart__c</fullName>
    <label>AssignmentStart</label>
    <type>DateTime</type>
</CustomField>