force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_BLPUDO__c.field-meta.xml
<CustomField>
    <fullName>CoIT_BLPUDO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BLPUDO</label>
    <type>Checkbox</type>
</CustomField>