force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Cause__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Cause__c</fullName>
    <label>Cause</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>