force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Client_Address__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Client_Address__c</fullName>
    <label>Client Address</label>
    <length>64</length>
    <type>Text</type>
</CustomField>