force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Client_City__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Client_City__c</fullName>
    <label>Client City</label>
    <length>64</length>
    <type>Text</type>
</CustomField>