force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>