force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Customer_Email__c</fullName>
    <label>Customer Email</label>
    <length>128</length>
    <type>Text</type>
</CustomField>