force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>