force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Customer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Customer_Phone_Number__c</fullName>
    <label>Customer Phone Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>