force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Description__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Description__c</fullName>
    <label>Description</label>
    <length>64</length>
    <type>Text</type>
</CustomField>