force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Document_Provideer__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Document_Provideer__c</fullName>
    <label>Document Provider</label>
    <length>64</length>
    <type>Text</type>
</CustomField>