force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Latitude__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Latitude__c</fullName>
    <label>Latitude</label>
    <length>64</length>
    <type>Text</type>
</CustomField>