force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Longitude__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Longitude__c</fullName>
    <label>Longitude</label>
    <length>64</length>
    <type>Text</type>
</CustomField>