force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Numero_Caso_SIAB__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Numero_Caso_SIAB__c</fullName>
    <label>Numero Caso SIAB</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>