force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_OnSite_Date__c.field-meta.xml
<CustomField>
    <fullName>CoIT_OnSite_Date__c</fullName>
    <label>OnSite Date</label>
    <type>DateTime</type>
</CustomField>