force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Open_Date__c</fullName>
    <label>Open Date</label>
    <type>DateTime</type>
</CustomField>