force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Ready_to_Process__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Ready_to_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Process</label>
    <type>Checkbox</type>
</CustomField>