force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_RToken__c.field-meta.xml
<CustomField>
    <fullName>CoIT_RToken__c</fullName>
    <label>RToken</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>