force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Source_Number__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Source_Number__c</fullName>
    <label>Number</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>