force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Supervisor_Document__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Supervisor_Document__c</fullName>
    <label>Supervisor Document</label>
    <length>64</length>
    <type>Text</type>
</CustomField>