force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Supervisor_Name__c</fullName>
    <label>Supervisor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>