force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Technicial_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Technicial_Name__c</fullName>
    <label>Technicial Name</label>
    <type>TextArea</type>
</CustomField>