force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_Type_Task_Click__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Type_Task_Click__c</fullName>
    <label>Tipo de Tarea Click</label>
    <length>64</length>
    <type>Text</type>
</CustomField>