force-app/main/default/objects/CoIT_SFS_Migration_Click__c/fields/CoIT_WO_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WO_Creation_Date__c</fullName>
    <label>WO Creation Date</label>
    <type>DateTime</type>
</CustomField>