force-app/main/default/objects/CoIT_SFS_Migration_Click__c/listViews/All_SFS_Migrations_Click.listView-meta.xml
<ListView>
    <fullName>All_SFS_Migrations_Click</fullName>
    <columns>NAME</columns>
    <columns>CoIT_Call_ID__c</columns>
    <columns>CoIT_BLPUDO__c</columns>
    <columns>CoIT_Customer_Name__c</columns>
    <columns>CoIT_Numero_Caso_SIAB__c</columns>
    <columns>CoIT_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SFS Migrations Click</label>
</ListView>